<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_browser"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/browser" />
        <item
            android:id="@+id/nav_data"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/data" />

        <item
            android:id="@+id/nav_music"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/music_service_player" />

        <item
            android:id="@+id/nav_barometer"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/barometer" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/camera" />
        <item
            android:id="@+id/nav_audiorecord"
            android:icon="@android:drawable/presence_audio_online"
            android:title="@string/record_audio" />

        <item
            android:id="@+id/nav_file_operation"
            android:icon="@android:drawable/ic_popup_disk_full"
            android:title="@string/file_operation" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_restaurants"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/restaurants_map" />
    </group>
</menu>